--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <body>
         <div class="main">
             <h1><a href="https://github.com/lengthylyova/gh-contrib-graph/">GitHub Contribution Graph</a> Preview</h1>
-            <div id="gh" data-login="lengthylyova"></div>
+            <div id="gh" data-login="StephenJLu"></div>
             <h5>Made by <a href="https://github.com/lengthylyova">lengthylyova</a></h5>
         </div>
         <script src="http://lengthylyova.pythonanywhere.com/static/gh-contrib-graph/gh.js"></script>
