--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
             <div id="gh" data-login="lengthylyova"></div>
             <h5>Made by <a href="https://github.com/lengthylyova">lengthylyova</a></h5>
         </div>
-        <script src="/gh-contrib-graph/assets/js/gh.js"></script>
+        <script src="http://lengthylyova.pythonanywhere.com/static/gh-contrib-graph/gh.js"></script>
     </body>
 </html>
